--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,3 +1,7 @@
+.adjustWidth {
+  width: auto;
+}
+
 .dragon {
     background: rgb(215, 97, 97);
     border-bottom: 5px black solid;
@@ -37,3 +41,5 @@
       transform: scale(1);
     }
   }
+
+  
